package field updates

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "orbital-osiris",
+  "name": "orderthai",
+  "private": true,
   "type": "module",
   "version": "0.0.1",
   "scripts": {
