--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.0",
     "@astrojs/check": "^0.5.4",
+    "astro": "^4.4.0",
+    "bootstrap": "^5.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "sass": "^1.71.0",
     "typescript": "^5.3.3"
   }
 }
