--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.4",
-    "astro": "^4.4.0",
-    "bootstrap": "^5.3.2"
+    "astro": "^4.4.0"
   },
   "devDependencies": {
-    "@mojojoejo/vite-plugin-purgecss": "^1.1.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "sass": "^1.71.0",
